control over Skroll visibility and permissions, bug fixes

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -131,6 +131,12 @@ hr{
   	top: 50%;
  	-webkit-transform: translateY(-50%);
 }
+
+.skroll-pref{
+	text-align: left;
+	padding-left: 10px;
+}
+
 .dock *,
 #button-sign{
 	color: #888888;
